Fixed horizontal scroll

--- a/src/scss/header-background.scss
+++ b/src/scss/header-background.scss
@@ -1,6 +1,7 @@
 .header-background-container {
   height: 100%;
   width: 100vw;
+  max-width: 100%;
   display: flex;
   gap: 80px;
   justify-content: flex-end;
